--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-postgres = "0.19.10"
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
+tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
+futures = "0.3.31"
+hyper-rustls = { version = "0.27.7", features = ["webpki-roots", "http2"] }
+hyper = "1.7.0"
+hyper-util = "0.1.16"
+http-body-util = "0.1.3"
+bytes = "1.10.1"
